--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.username=<username specified on MONGO_INITDB_ROOT_USERNAME>
 #spring.data.mongodb.password=<password specified on MONGO_INITDB_ROOT_PASSWORD>
 spring.data.mongodb.database=InventoryDB
+
+#server.error.include-message = always
+server.error.include-stacktrace = never
